--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "ngx-cookie-service": "^17.0.1",
     "primeng": "~17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
