--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "ngx-cookie-service": "^17.0.1",
+    "primeflex": "^3.3.1",
     "primeng": "~17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
